--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </h2>
     </div>
     <div class="gems">
-            <img src="assets/images/red.jpg" id="one" alt="Red Gem">
-            <img src="assets/images/blue.jpg" id="two" alt="Blue Gem">
-            <img src="assets/images/yellow.jpg" id="three" alt="Yellow Gem">
-            <img src="assets/images/green.jpg" id="four" alt="Green Gem">
+            <img src="assets/images/red.jpg" id="one">
+            <img src="assets/images/blue.jpg" id="two">
+            <img src="assets/images/yellow.jpg" id="three">
+            <img src="assets/images/green.jpg" id="four">
     </div>
     <div class="userTotal">
         <h3>Your total score is:</h3><br>
